--- a/1.linear list/linear list.vcxproj.filters
+++ b/1.linear list/linear list.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="list.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="singlelist.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="list.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="singlelist.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
